--- a/Tools/ProductsPackager/ProductsPackager/ProductsPackager.vcxproj
+++ b/Tools/ProductsPackager/ProductsPackager/ProductsPackager.vcxproj
@@ -144,6 +144,9 @@
     <ProjectReference Include="..\..\..\FatedQuest.Libraries\Observer\Observer.vcxproj">
       <Project>{82e4f919-75b9-4614-b7b9-bac8ecb40834}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\FatedQuest.Libraries\SharedEnums\SharedEnums.vcxproj">
+      <Project>{231d6f13-1d66-435d-adf1-810e7ebb056a}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\FatedQuest.Libraries\StandardOperations\StandardOperations.vcxproj">
       <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
     </ProjectReference>
