Cleaned up projects so that we stop getting a bunch of files in the main folder

--- a/SuperGameEngine/Tools/Tools.vcxproj
+++ b/SuperGameEngine/Tools/Tools.vcxproj
@@ -99,6 +99,12 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\SuperGameEngine\</OutDir>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\SuperGameEngine\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Tools_Debug|x64'">
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\SuperGameEngine\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
