--- a/SuperGameEngine/Tools/Tools.vcxproj
+++ b/SuperGameEngine/Tools/Tools.vcxproj
@@ -218,9 +218,13 @@
     <ClInclude Include="FatedQuestLibraries.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameEngineEquivalents\Component\Component.h" />
+    <ClInclude Include="GameEngineEquivalents\Component\ComponentTreeViewItem.h" />
+    <ClInclude Include="GameEngineEquivalents\Component\SerializablePropertyLoader.h" />
     <ClInclude Include="GameEngineEquivalents\Component\ToolsComponent.h" />
     <ClInclude Include="GameEngineEquivalents\GameObject\GameObject.h" />
     <ClInclude Include="GameEngineEquivalents\GameObject\ToolsGameObject.h" />
+    <ClInclude Include="GameEngineEquivalents\SerializableProperties\TextSerializableProperty.h" />
+    <ClInclude Include="GameEngineEquivalents\SerializableProperties\ToolsSerializableProperty.h" />
     <ClInclude Include="ImGuiIncludes.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SystemActions\FileDialog\FileDialog.h" />
@@ -298,8 +302,11 @@
     <ClCompile Include="Engine\Graphics\ImGuiSuperTexture.cpp" />
     <ClCompile Include="Engine\Graphics\ImGuiSuperTextureWrapper.cpp" />
     <ClCompile Include="Engine\Graphics\ImGuiTexture.cpp" />
+    <ClCompile Include="GameEngineEquivalents\Component\ComponentTreeViewItem.cpp" />
+    <ClCompile Include="GameEngineEquivalents\Component\SerializablePropertyLoader.cpp" />
     <ClCompile Include="GameEngineEquivalents\Component\ToolsComponent.cpp" />
     <ClCompile Include="GameEngineEquivalents\GameObject\ToolsGameObject.cpp" />
+    <ClCompile Include="GameEngineEquivalents\SerializableProperties\TextSerializableProperty.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Tools_Debug|x64'">Create</PrecompiledHeader>
