--- a/SuperGameEngine/Engine/Engine.vcxproj
+++ b/SuperGameEngine/Engine/Engine.vcxproj
@@ -272,8 +272,11 @@
     <ClInclude Include="Structural\Scene\Scene.h" />
     <ClInclude Include="Structural\Scene\SuperGrandScene.h" />
     <ClInclude Include="Structural\Scene\SuperScene.h" />
+    <ClInclude Include="Structural\Serializable\BasicSerializableProperty.h" />
     <ClInclude Include="Structural\Serializable\Serializable.h" />
+    <ClInclude Include="Structural\Serializable\SerializableDataType.h" />
     <ClInclude Include="Structural\Serializable\SerializableParser.h" />
+    <ClInclude Include="Structural\Serializable\SerializableProperty.h" />
     <ClInclude Include="Structural\Serializable\SuperSerializableParser.h" />
     <ClInclude Include="Structural\Spatial\Area\Circle.h" />
     <ClInclude Include="Structural\Spatial\Area\Rectangle.h" />
@@ -325,6 +328,7 @@
     <ClCompile Include="Structural\Packages\SuperSceneLoadPackage.cpp" />
     <ClCompile Include="Structural\Scene\SuperGrandScene.cpp" />
     <ClCompile Include="Structural\Scene\SuperScene.cpp" />
+    <ClCompile Include="Structural\Serializable\BasicSerializableProperty.cpp" />
     <ClCompile Include="Structural\Serializable\SuperSerializableParser.cpp" />
     <ClCompile Include="Structural\Spatial\Area\Circle.cpp" />
     <ClCompile Include="Structural\Spatial\Area\Rectangle.cpp" />
