--- a/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
+++ b/SuperGameEngine/SuperGameEngine/SuperGameEngine.vcxproj
@@ -219,6 +219,9 @@
     <ProjectReference Include="..\Engine\Engine.vcxproj">
       <Project>{9cead38a-6675-4104-a350-345863823a3b}</Project>
     </ProjectReference>
+    <ProjectReference Include="..\Tools\Tools.vcxproj">
+      <Project>{e0ee8a5f-2897-4cd2-b02f-8132110c0751}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
