--- a/SuperGameEngine/Tools/Tools.vcxproj
+++ b/SuperGameEngine/Tools/Tools.vcxproj
@@ -223,6 +223,8 @@
     <ClInclude Include="GameEngineEquivalents\Component\ToolsComponent.h" />
     <ClInclude Include="GameEngineEquivalents\GameObject\GameObject.h" />
     <ClInclude Include="GameEngineEquivalents\GameObject\ToolsGameObject.h" />
+    <ClInclude Include="GameEngineEquivalents\Scene\Scene.h" />
+    <ClInclude Include="GameEngineEquivalents\Scene\ToolsScene.h" />
     <ClInclude Include="GameEngineEquivalents\SerializableProperties\TextSerializableProperty.h" />
     <ClInclude Include="GameEngineEquivalents\SerializableProperties\ToolsSerializableProperty.h" />
     <ClInclude Include="ImGuiIncludes.h" />
@@ -243,6 +245,7 @@
     <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentEvent\DocumentActionEventArguments.h" />
     <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentEvent\DocumentEventAction.h" />
     <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentEvent\DocumentEventOpenLevel.h" />
+    <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentEvent\DocumentEventSaveContext.h" />
     <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentFactory.h" />
     <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentManager.h" />
     <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentMatcher.h" />
@@ -306,6 +309,7 @@
     <ClCompile Include="GameEngineEquivalents\Component\SerializablePropertyLoader.cpp" />
     <ClCompile Include="GameEngineEquivalents\Component\ToolsComponent.cpp" />
     <ClCompile Include="GameEngineEquivalents\GameObject\ToolsGameObject.cpp" />
+    <ClCompile Include="GameEngineEquivalents\Scene\ToolsScene.cpp" />
     <ClCompile Include="GameEngineEquivalents\SerializableProperties\TextSerializableProperty.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
