--- a/SuperGameEngine/Tools/Tools.vcxproj.filters
+++ b/SuperGameEngine/Tools/Tools.vcxproj.filters
@@ -235,6 +235,12 @@
     <Filter Include="Source Files\GameEngineEquivalents\SerializableProperties">
       <UniqueIdentifier>{f347fe58-562d-49f0-bd76-c21c1fee3239}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GameEngineEquivalents\Scene">
+      <UniqueIdentifier>{f452f757-fdd7-4693-96e3-400d6c13892f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GameEngineEquivalents\Scene">
+      <UniqueIdentifier>{9dcef323-db7e-4491-8cab-fcb290ab4a3b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -492,6 +498,15 @@
     <ClInclude Include="GameEngineEquivalents\SerializableProperties\TextSerializableProperty.h">
       <Filter>Header Files\GameEngineEquivalents\SerializableProperties</Filter>
     </ClInclude>
+    <ClInclude Include="ToolsEngine\FrameworkManager\DocumentManager\DocumentEvent\DocumentEventSaveContext.h">
+      <Filter>Header Files\ToolsEngine\FrameworkManager\DocumentManager\DocumentEvent</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngineEquivalents\Scene\Scene.h">
+      <Filter>Header Files\GameEngineEquivalents\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngineEquivalents\Scene\ToolsScene.h">
+      <Filter>Header Files\GameEngineEquivalents\Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -622,6 +637,9 @@
     </ClCompile>
     <ClCompile Include="GameEngineEquivalents\SerializableProperties\TextSerializableProperty.cpp">
       <Filter>Source Files\GameEngineEquivalents\SerializableProperties</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEngineEquivalents\Scene\ToolsScene.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
