[#108] You can now generate enums as bit flags.
This also added types to enums which does mean we should not forward declare them.

--- a/SuperGameEngine/Input/Input.vcxproj.filters
+++ b/SuperGameEngine/Input/Input.vcxproj.filters
@@ -21,27 +21,15 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="SuperEnum.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GenerateEnum.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="FatedQuestLibraries.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SuperEnumType.h">
+    <ClInclude Include="KeyState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Input.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="pch.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="SuperEnum.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="GenerateEnum.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
