--- a/SuperGameEngine/Input/Input.vcxproj
+++ b/SuperGameEngine/Input/Input.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{7e141bab-0c83-497e-a3ad-49349e2ffd22}</ProjectGuid>
-    <RootNamespace>SuperEnumGenerator</RootNamespace>
+    <ProjectGuid>{acf8766f-fe67-4ded-88c2-03fe9dcb1c0e}</ProjectGuid>
+    <RootNamespace>Input</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -70,6 +70,12 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\SuperGameEngine\</OutDir>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\SuperGameEngine\</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -131,6 +137,8 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <ForcedIncludeFiles>pch.h</ForcedIncludeFiles>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -141,54 +149,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="FatedQuestLibraries.h" />
     <ClInclude Include="framework.h" />
-    <ClInclude Include="GenerateEnum.h" />
+    <ClInclude Include="KeyState.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="SuperEnum.h" />
-    <ClInclude Include="SuperEnumType.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GenerateEnum.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="SuperEnum.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\Logger\Logger.vcxproj">
-      <Project>{40283b7b-524e-4753-9617-ff1da95cd9d0}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\Observer\Observer.vcxproj">
-      <Project>{82e4f919-75b9-4614-b7b9-bac8ecb40834}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\StandardObjects\StandardObjects.vcxproj">
-      <Project>{3f3ccd80-0310-46b9-a963-285eac938cd6}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\StandardOperations\StandardOperations.vcxproj">
-      <Project>{1ae9e9be-b55d-4c31-8a6f-7f3220e8d538}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\StoredDocument\StoredDocument.vcxproj">
-      <Project>{f54f462a-6a7e-4273-8f91-9098242ae380}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\FatedQuest.Libraries\XmlDocument\XmlDocument.vcxproj">
-      <Project>{04db48a3-bce2-4311-8fc4-ed2b39b5e3b8}</Project>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\rapidxml.1.13\build\native\rapidxml.targets" Condition="Exists('..\packages\rapidxml.1.13\build\native\rapidxml.targets')" />
+    <Import Project="..\packages\sdl2.redist.2.0.5\build\native\sdl2.redist.targets" Condition="Exists('..\packages\sdl2.redist.2.0.5\build\native\sdl2.redist.targets')" />
+    <Import Project="..\packages\sdl2.2.0.5\build\native\sdl2.targets" Condition="Exists('..\packages\sdl2.2.0.5\build\native\sdl2.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\rapidxml.1.13\build\native\rapidxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\rapidxml.1.13\build\native\rapidxml.targets'))" />
+    <Error Condition="!Exists('..\packages\sdl2.redist.2.0.5\build\native\sdl2.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\sdl2.redist.2.0.5\build\native\sdl2.redist.targets'))" />
+    <Error Condition="!Exists('..\packages\sdl2.2.0.5\build\native\sdl2.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\sdl2.2.0.5\build\native\sdl2.targets'))" />
   </Target>
 </Project>
