--- a/SuperGameEngine/Input/Input.vcxproj
+++ b/SuperGameEngine/Input/Input.vcxproj
@@ -150,11 +150,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="InputManagement\InputManager.h" />
+    <ClInclude Include="InputManagement\SuperInputManager.h" />
     <ClInclude Include="KeyState.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="InputManagement\SuperInputManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -164,6 +167,14 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\FatedQuest.Libraries\GamePackage\GamePackage.vcxproj">
+      <Project>{272a3aeb-be9f-4219-919d-701c0a4a996f}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\FatedQuest.Libraries\Logger\Logger.vcxproj">
+      <Project>{40283b7b-524e-4753-9617-ff1da95cd9d0}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
