--- a/Tools/SuperGenerator/SuperGenerator/SuperGenerator/SuperGenerator.vcxproj
+++ b/Tools/SuperGenerator/SuperGenerator/SuperGenerator/SuperGenerator.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClInclude Include="DebugLogger.h" />
     <ClInclude Include="FatedQuestLibraries.h" />
+    <ClInclude Include="SingleEnum.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
