--- a/SuperGameEngine/Input/Input.vcxproj
+++ b/SuperGameEngine/Input/Input.vcxproj
@@ -150,14 +150,30 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="InputManagement\Engine\KeyboardKeycodeConversion.h" />
+    <ClInclude Include="InputManagement\Engine\KeyCode.h" />
+    <ClInclude Include="InputManagement\Engine\KeyInput.h" />
+    <ClInclude Include="InputManagement\Engine\KeyState.h" />
+    <ClInclude Include="InputManagement\Event\GeneralKeyState.h" />
+    <ClInclude Include="InputManagement\Event\KeyboardEvent.h" />
+    <ClInclude Include="InputManagement\Event\KeyboardEventType.h" />
+    <ClInclude Include="InputManagement\Event\KeyboardKeycode.h" />
+    <ClInclude Include="InputManagement\Event\KeyScancode.h" />
+    <ClInclude Include="InputManagement\Event\KeySymbol.h" />
+    <ClInclude Include="InputManagement\Event\WindowEvent.h" />
+    <ClInclude Include="InputManagement\Event\WindowEventType.h" />
+    <ClInclude Include="InputManagement\InputHandler.h" />
     <ClInclude Include="InputManagement\InputManager.h" />
+    <ClInclude Include="InputManagement\SDLInputManager.h" />
     <ClInclude Include="InputManagement\SuperInputManager.h" />
-    <ClInclude Include="KeyState.h" />
+    <ClInclude Include="InputManagement\SuperSDLInputManager.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="InputManagement\Engine\KeyInput.cpp" />
     <ClCompile Include="InputManagement\SuperInputManager.cpp" />
+    <ClCompile Include="InputManagement\SuperSDLInputManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
