--- a/Tools/SuperGenerator/SuperGenerator/SuperGenerator/SuperGenerator.vcxproj.filters
+++ b/Tools/SuperGenerator/SuperGenerator/SuperGenerator/SuperGenerator.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="DebugLogger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SingleEnum.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
