--- a/SuperGameEngine/InputTests/InputTests.vcxproj
+++ b/SuperGameEngine/InputTests/InputTests.vcxproj
@@ -115,6 +115,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="InputManagement\Engine\ControllerLayoutFromXMLTests.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -127,6 +128,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\FatedQuest.Libraries\Logger\Logger.vcxproj">
+      <Project>{40283b7b-524e-4753-9617-ff1da95cd9d0}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\FatedQuest.Libraries\Observer\Observer.vcxproj">
+      <Project>{82e4f919-75b9-4614-b7b9-bac8ecb40834}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\FatedQuest.Libraries\StoredDocument\StoredDocument.vcxproj">
+      <Project>{f54f462a-6a7e-4273-8f91-9098242ae380}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\Engine\Engine.vcxproj">
+      <Project>{9cead38a-6675-4104-a350-345863823a3b}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Input\Input.vcxproj">
       <Project>{acf8766f-fe67-4ded-88c2-03fe9dcb1c0e}</Project>
     </ProjectReference>
