--- a/SuperGameEngine/Input/packages.config
+++ b/SuperGameEngine/Input/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="rapidxml" version="1.13" targetFramework="native" />
   <package id="sdl2" version="2.0.5" targetFramework="native" />
   <package id="sdl2.redist" version="2.0.5" targetFramework="native" />
 </packages>
