--- a/SuperGameEngine/Input/Input.vcxproj.filters
+++ b/SuperGameEngine/Input/Input.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClInclude Include="InputManagement\Engine\AxisToUniversalAxis.h">
       <Filter>Header Files\InputManagement\Engine</Filter>
     </ClInclude>
+    <ClInclude Include="InputManagement\Event\ControllerDeviceEvent.h">
+      <Filter>Header Files\InputManagement\Event</Filter>
+    </ClInclude>
+    <ClInclude Include="InputManagement\Event\JoystickDeviceEvent.h">
+      <Filter>Header Files\InputManagement\Event</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
