--- a/SuperGameEngine/Input/Input.vcxproj
+++ b/SuperGameEngine/Input/Input.vcxproj
@@ -161,12 +161,13 @@
     <ClInclude Include="InputManagement\Engine\KeyboardKeycodeConversion.h" />
     <ClInclude Include="InputManagement\Engine\KeyCode.h" />
     <ClInclude Include="InputManagement\Engine\KeyInput.h" />
-    <ClInclude Include="InputManagement\Engine\KeyState.h" />
+    <ClInclude Include="InputManagement\Engine\KeyOrButtonState.h" />
     <ClInclude Include="InputManagement\Engine\SuperControllerLayoutFromXML.h" />
     <ClInclude Include="InputManagement\Engine\UniversalControllerAxis.h" />
     <ClInclude Include="InputManagement\Engine\UniversalControllerButton.h" />
     <ClInclude Include="InputManagement\Event\ControllerDeviceEvent.h" />
     <ClInclude Include="InputManagement\Event\GeneralKeyState.h" />
+    <ClInclude Include="InputManagement\Event\JoyButtonEvent.h" />
     <ClInclude Include="InputManagement\Event\JoystickDeviceEvent.h" />
     <ClInclude Include="InputManagement\Event\KeyboardEvent.h" />
     <ClInclude Include="InputManagement\Event\KeyboardEventType.h" />
