[#138] You can now map DPad Hats upon controllers.
Also added Groups to SuperGenerator which can be used to create groups within an enum generated from the Data.
Also fixed a bug in SuperGenerator with BitFlags.

--- a/SuperGameEngine/Input/Input.vcxproj
+++ b/SuperGameEngine/Input/Input.vcxproj
@@ -167,7 +167,9 @@
     <ClInclude Include="InputManagement\Engine\UniversalControllerButton.h" />
     <ClInclude Include="InputManagement\Event\ControllerDeviceEvent.h" />
     <ClInclude Include="InputManagement\Event\GeneralKeyState.h" />
+    <ClInclude Include="InputManagement\Event\HatPosition.h" />
     <ClInclude Include="InputManagement\Event\JoyButtonEvent.h" />
+    <ClInclude Include="InputManagement\Event\JoyHatEvent.h" />
     <ClInclude Include="InputManagement\Event\JoystickDeviceEvent.h" />
     <ClInclude Include="InputManagement\Event\KeyboardEvent.h" />
     <ClInclude Include="InputManagement\Event\KeyboardEventType.h" />
